--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -46,6 +46,11 @@
     >img{
       align-self:center;
     }
+    h2{
+      font-size:24px;
+      margin:64px 0 24px;
+      font-family: 'Poppins', sans-serif;
+    }
     form{
       input{
         height:50px;
@@ -53,6 +58,14 @@
         padding:0 16px;
         background:#fff;
         border:1px solid #a8a8b3;
+      }
+    }
+    p{
+      font-size: 14px;
+      color:#737380;
+      margin-top:16px;
+      a{
+        color:#e559f9;
       }
     }
     button{
