--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -4,6 +4,7 @@
   font-weight: 500;
   background:#835afd;
   color:#fff;
+  padding:0 32px;
 
   display:flex;
   justify-content:center;
@@ -16,6 +17,12 @@
   img{
     margin-right:8px;
   }
+  &.outlined{
+    background:#fff;
+    border:1px solid #835afd;
+    color:#835afd;
+  }
+
   &:not(:disabled):hover{
     filter:brightness(0.9);
   }
